# boxingtimer2

./: .gitignore  Cargo.toml  Dioxus.toml  TODO.txt  build.rs  package-lock.json  tailwind.config.js  taplo.toml
assets/: app.css  items.json  sequences.json  tailwind.css
sport/: Cargo.toml
sport/src/: defaults.rs  duration.rs  errors.rs  exercises.rs  indexedvec.rs  item.rs  item_list.rs  lib.rs  player.rs  sequence.rs  signal.rs  sound.rs  status.rs  stopwatch.rs  tag.rs  timer.rs  workout.rs
src/: audio.rs  bell.rs  boxing_timer.rs  components.rs  defaults.rs  difficulty.rs  duration.rs  errors.rs  exercises.rs  global.rs  helpers.rs  indexedvec.rs  item.rs  loading.rs  main.rs  mobile.rs  mobileglobal.rs  mobiletimer.rs  routes.rs  sequence.rs  signal.rs  sound.rs  status.rs  stopwatch.rs  tag.rs  timer.rs  web.rs  workout.rs
