[package]
name = "boxingtimer2"
version = "0.1.0"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
edition = "2021"

[build-dependencies]
dioxus-daisyui = "0.8.0"

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
gloo = { version = "0.11.0", features = ["futures", "dialogs"] }
console_error_panic_hook = "0.1.7"
derive_more = { version = "1.0", features = ["full"] }
js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = ["HtmlAudioElement"] }
duration-string = { version = "0.4.0", features = ["serde"] }
itertools = "0.13.0"
thiserror = "2.0"
rand = "0.8"
bon = "3.3.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
slug = "0.1.6"
serde = "1.0.217"
serde_json = "1.0.134"
serde_with = { version = "3.12.0", features = ["chrono"] }

[features]
default = ["web"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
